Fixed white extra gap on the right of each page. Moved all header-bg to its own scss file.

--- a/app/assets/stylesheets/program-header.scss
+++ b/app/assets/stylesheets/program-header.scss
@@ -1,8 +1,3 @@
-// Place all the styles related to the FullTimeBootcamp controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-
 $orange: #fe9a22;
 $grey: #646464;
 
@@ -11,62 +6,14 @@ $grey: #646464;
   font-size: 60px;
 }
 
-.full-time-bg-header{
-  background-image: url('/assets/full-time-bg.jpg');
+.full-bg-header{
+  background-image: url('/assets/full-time/full-time-bg.jpg');
   background-repeat: none;
   padding: 230px 0;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   background-position: center;
-}
-
-
-
-.program-content{
-  padding-top: 10%;
-}
-
-
-.front-back{
-  color: $orange;
-}
-
-.orange{
-  color: $orange;
-}
-
-.orange:hover{
-  color: $grey;
-}
-
-.white{
-  color: #fff;
-}
-
-.orange-bg{
-  background: $orange;
-}
-
-
-.no-padding-sides{
-  padding-left:0;
-  padding-right: 0;
-}
-
-.btn-faq{
-  background: #fff;
-  color: $orange;
-  border-radius: 0;
-  padding: 10px 60px;
-  font-size: 18px;
-  border: 0;
-}
-
-.technologies{
-  max-width: 100px;
-  height: 80px;
-  display: inline-block
 }
 
 // RUBY ONE RAILS
@@ -159,6 +106,3 @@ $grey: #646464;
   background-size: cover;
   background-position: center;
 }
-
-
-
