--- a/app/assets/stylesheets/programs.scss
+++ b/app/assets/stylesheets/programs.scss
@@ -1,3 +1,60 @@
-// Place all the styles related to the Programs controller here.
+// Place all the styles related to the FullTimeBootcamp controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+$orange: #fe9a22;
+$grey: #646464;
+
+
+.program-content{
+  padding-top: 10%;
+}
+
+
+.front-back{
+  color: $orange;
+}
+
+.orange{
+  color: $orange;
+}
+
+.orange:hover{
+  color: $grey;
+}
+
+.white{
+  color: #fff;
+}
+
+.orange-bg{
+  background: $orange;
+}
+
+
+.no-padding-sides{
+  padding-left:0;
+  padding-right: 0;
+}
+
+.btn-faq{
+  background: #fff;
+  color: $orange;
+  border-radius: 0;
+  padding: 10px 60px;
+  font-size: 18px;
+  border: 0;
+}
+
+.technologies{
+  max-width: 100px;
+  height: 80px;
+  display: inline-block
+}
+
+
+
+
+
+
